# soily

./: .gitignore  SoilV1.kicad_pcb  SoilV1.kicad_prl  SoilV1.kicad_pro  SoilV1.kicad_sch  fp-info-cache  fp-lib-table
CapacitiveStrips.pretty/: C_Rectangle.kicad_mod
HW/: .gitignore  DMG2302UKQ.spice.lib  Soily.kicad_pcb  Soily.kicad_prl  Soily.kicad_pro  Soily.kicad_sch  Soily.wbk  bq25504_Design_Helper.numbers  fp-info-cache  fp-lib-table  sym-lib-table
HW/Breakout_BQ25570_Cap/: fp-info-cache  fp-lib-table  (+6 more)
QR.pretty/: MatterQR.kicad_mod
SW/: .clang-format  .gitignore  tlvparse.py
SW/humid_zephyr/: .gitignore  CMakeLists.txt  Kconfig  Kconfig.sysbuild  README.md  TODO.md  VERSION  pm_static_nrf54l15dk_nrf54l15_cpuapp_internal.yml  prj.conf  prj_release.conf  sysbuild.conf  sysbuild_internal.conf
SW/humid_zephyr/boards/: nrf54l15dk_nrf54l15_cpuapp.overlay  nrf54l15dk_nrf54l15_cpuapp_internal.conf  nrf54l15dk_nrf54l15_cpuapp_internal.overlay  nrf54l15dk_nrf54l15_cpuapp_release.overlay
SW/humid_zephyr/src/: app_task.cpp  app_task.h  chip_project_config.h  commissioning_window.cpp  identify_stub.cpp  main.cpp  sensor.matter  sensor.zap  sht4x.cpp  sht4x.h
SW/humid_zephyr/src/zap-generated/: IMClusterCommandHandler.cpp  PluginApplicationCallbacks.h  access.h  callback-stub.cpp  endpoint_config.h  gen_config.h
SW/humid_zephyr/sysbuild/mcuboot/: prj.conf  prj_production.conf  prj_release.conf
SW/humid_zephyr/sysbuild/mcuboot/boards/: nrf54l15dk_nrf54l15_cpuapp_internal.conf  nrf54l15dk_nrf54l15_cpuapp_internal.overlay  nrf54l15dk_nrf54l15_cpuapp_release.conf
(+124 files in other folders)
